--- a/shriwebpage.html
+++ b/shriwebpage.html
@@ -10,6 +10,7 @@
 
 <h2>Link to SMU website</h2>
 <p>HTML links are defined with the a tag. The link address is specified in the href attribute:</p>
+ <p> SMU does not have a cricket team</P>
 
 <a href="https://www.smu.edu/">This is a link</a>
 
